# immersive-checkers

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Checkers/: CMakeLists.txt  main.cpp
Checkers/include/: ArduinoController.hpp  CheckersBoard.hpp  CheckersSquare.hpp  SerialPort.hpp  checkersFunctions.hpp  checkersVariables.hpp  gameBoard.hpp  square.hpp
Checkers/not implemented/: ArduinoController.cpp  ArduinoController.hpp  SerialPort.cpp  SerialPort.hpp
Checkers/src/: ArduinoController.cpp  Button.cpp  CheckersBoard.cpp  CheckersPiece.cpp  CheckersSquare.cpp  SerialPort.cpp  checkersFunctions.cpp  checkersVariables.cpp  error.cpp  gameBoard.cpp  square.cpp
include/: ArduinoController.hpp  BaseState.hpp  Board.hpp  Checker.hpp  ComputerAI.hpp  Game.hpp  GameState.hpp  GameUi.hpp  Piece.hpp  PlayState.hpp  Player.hpp  SerialPort.h  StateMachine.hpp  Tile.hpp
src/: ArduinoController.cpp  Board.cpp  Board.hpp  Checker.cpp  ComputerAI.cpp  ComputerAI.hpp  Game.cpp  GameState.cpp  GameUi.cpp  Keypadhandler.ino  Piece.cpp  PlayState.cpp  Player.cpp  SerialPort.cpp  StateMachine.cpp  Tile.cpp  util.hpp
